<resources>
    <!-- UNIVERSAL STRINGS -->
    <string name="app_name">EduHub</string>
    <string name="eduhub">EduHub</string>
    <string name="version">Version 2.0</string>

    <!-- LANDING PAGE STRINGS -->
    <string name="welcome">Welcome Back!</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>

    <!-- SIGN IN STRINGS -->
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signin_google">Sign In with Google</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="account_not_exists">Don\'t have an account?</string>

    <!-- SIGN UP STRINGS -->
    <string name="account_exists">Already have an account?</string>
    <string name="password_confirmation">Confirm Password</string>
    <string name="reset_pass">Reset your password</string>
    <string name="password_security_hint">Your password must be at least 8 characters long and
        include at least one uppercase letter, one lowercase letter, and one special character
        (e.g., $, #, @).</string>

    <!-- RESET PASSWORD STRINGS -->
    <string name="reset_pass_text">Please enter your e-mail address to receive the verification code.</string>
    <string name="reset_pass_btn">Reset Password</string>

    <!-- RESET PASSWORD CONFIRMATION STRINGS -->
    <string name="confirm_pass_reset">A password reset email has been sent to your email address.</string>
    <string name="redirect_login">You are being redirected to the login page…</string>

    <!-- EMAIL VERIFICATION STRINGS -->
    <string name="email_verification">A verification link has been sent to your email address</string>

    <!-- HOME PAGE STRINGS -->
    <string name="search_text">What do you want to learn now?</string>
    <string name="search_hint">Search courses…</string>
    <string name="best_courses">Best Courses</string>
    <string name="your_courses">Your courses</string>
    <string name="category_text">Categories</string>
    <string name="recommended_text">Recommended</string>

    <!-- SIGN UP STRINGS -->
    <string name="my_certificates">My Certificates</string>

    <!-- MENU STRINGS -->
    <string name="personal_info">Personal Info</string>
    <string name="about_us">About Us</string>
    <string name="help_and_support">Help and Support</string>
    <string name="logout">Log Out</string>

    <!-- HELP AND SUPPORT STRINGS -->
    <string name="welcome_support_text">Welcome to EduHub Support!</string>
    <string name="support_text_1">We are here to help you make the most of your experience with our app.</string>
    <string name="faq">Frequently Asked Questions (FAQ)</string>
    <string name="faq_questions">
        1.How do I create an account?&#10;
        - Open the app and click on "Sign Up." Follow the instructions to enter your information and create your account.&#10;&#10;
        2.I forgot my password. What should I do?&#10;
        - On the login screen, click on "Forgot Password?" and follow the instructions to reset it.&#10;&#10;
        3.How can I update my profile?&#10;
        - Go to the "My Profile" section in the menu. Here, you can edit your information and update your photo.&#10;&#10;
        4.What should I do if the app is not working correctly?&#10;
        - Try restarting the app. If the issue persists, check for updates available in your app store and install the latest version.
    </string>
    <string name="contact_support_title">Contact Support</string>
    <string name="contact_support_text">
        If you didn\'t find the answer you were looking for, our support team is ready to help! Follow these steps to get in touch:&#10;
        - Email: Send your questions to eduhubproject2000@gmail.com.
    </string>
    <string name="useful_tips">Useful Tips</string>
    <string name="tips">
        - Keep the app updated to ensure the best performance.&#10;
        - Enable notifications so you don\'t miss important updates.&#10;
    </string>
    <string name="thanks">Thank you for choosing EduHub! We are here to ensure that your experience is the best it can be.</string>

    <!-- ABOUT US STRINGS -->
    <string name="about_us_text">EduHub is a platform that offers free courses to users, providing access to valuable educational resources. This application was developed by students Caroline, Catarina, and Rafael as part of their final project for the Software Development course.</string>

    <!-- PERSONAL INFO STRINGS -->
    <string name="personal_info_text">EduHub is a platform that offers free courses to users, providing access to valuable educational resources. This application was developed by students Caroline, Catarina, and Rafael as part of their final project for the Software Development course.</string>

    <!-- NAV STRINGS -->
    <string name="home">Home</string>
    <string name="certificates">Certificates</string>
    <string name="menu">Menu</string>

    <!-- DESCRIPTION STRINGS -->
    <string name="back_btn_desc">Back</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- COURSES STRINGS -->
    <string name="couse_1">Back End Developer Learning Path</string>
    <string name="couse_2">Front End Developer Learning Path</string>
    <string name="couse_3">C / C++</string>
    <string name="couse_4">Deep Learning with PyTorch Course - December 2020</string>
    <string name="couse_5">Data Analysis with Python Course</string>
    <string name="couse_6">Mathematics</string>
    <string name="couse_7">DevOps Courses</string>
    <string name="couse_8">Deep Learning with PyTorch Live Course</string>
    <string name="couse_9">Popular Programming Courses</string>
    <string name="couse_10">App Development Tutorials</string>
    <string name="couse_11">PHP Tutorials</string>
    <string name="couse_12">Vue.js</string>
    <string name="couse_13">Data Science</string>
    <string name="couse_14">Ethical Hacking</string>
    <string name="couse_15">JavaScript Tutorials</string>
    <string name="couse_16">Python Tutorials</string>
    <string name="couse_17">React Tutorials</string>
    <string name="couse_18">HTML and CSS Tutorials</string>
    <string name="couse_19">Computer Science Concepts</string>

    <!-- COURSE PAGE STRINGS -->
    <string name="course_text">Courses</string>
    <string name="end_course">End Course</string>
    
    <!-- CERTIFICATE PAGE STRINGS -->
    <string name="congrat">Congratulations!</string>
    <string name="congrat2">You have successfully completed the course</string>

</resources>