<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/helpSupportLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_main_color">

    <ImageButton
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="@dimen/back_btn_margin_top"
        android:layout_marginStart="@dimen/back_btn_margin_left"
        android:src="@drawable/ic_left_arrow"
        android:background="@drawable/bg_button_green"
        android:contentDescription="@string/back_btn_desc"
        app:tint="@color/bg_main_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">

        <TextView
            android:id="@+id/eduhubText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_eduhub_2"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/eduhub"
            android:text="@string/eduhub"
            android:textColor="@color/main_green"
            android:textSize="@dimen/h1_size"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/welcomeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/eduhub"
            android:text="@string/welcome_support_text"
            android:textColor="@color/dark_color"
            android:textSize="@dimen/h4_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/supportText"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/eduhub"
            android:text="@string/support_text_1"
            android:textColor="@color/light_gray"
            android:textSize="@dimen/h5_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/faqTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/eduhub"
            android:text="@string/faq"
            android:textColor="@color/dark_color"
            android:textSize="@dimen/h4_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/faqQuestionsText"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/eduhub"
            android:text="@string/faq_questions"
            android:textColor="@color/light_gray"
            android:textSize="@dimen/h5_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/contactSupportText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/eduhub"
            android:text="@string/contact_support_title"
            android:textColor="@color/dark_color"
            android:textSize="@dimen/h4_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/contactEmailText"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/eduhub"
            android:text="@string/contact_support_text"
            android:textColor="@color/light_gray"
            android:textSize="@dimen/h5_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/thanksText"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/eduhub"
            android:text="@string/thanks"
            android:textColor="@color/dark_color"
            android:textSize="13sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center_horizontal"
            app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/versionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-10dp"
                android:contentDescription="@string/eduhub"
                android:text="@string/version"
                android:textColor="@color/light_gray"
                android:alpha="0.5"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/bottom_navigation"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="horizontal"
            android:background="@color/bg_main_color"
            android:gravity="center">

            <ImageButton
                android:id="@+id/button_home"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:src="@drawable/ic_home"
                android:background="@drawable/bg_nav"
                android:contentDescription="@string/account_exists"
                app:tint="@color/dark_color"/>

            <ImageButton
                android:id="@+id/button_certificates"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:src="@drawable/ic_certificate"
                android:background="@drawable/bg_nav"
                android:contentDescription="@string/account_exists"
                app:tint="@color/dark_color"/>

            <ImageButton
                android:id="@+id/button_menu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:src="@drawable/ic_menu"
                android:background="@drawable/bg_nav_selected"
                android:contentDescription="@string/account_exists"
                app:tint="@color/dark_color" />

        </LinearLayout>
    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>