<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/forgotPassLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_main_color">

    <ImageButton
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="@dimen/back_btn_margin_top"
        android:layout_marginStart="@dimen/back_btn_margin_left"
        android:src="@drawable/ic_left_arrow"
        android:background="@drawable/bg_button_green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/bg_main_color"
        android:contentDescription="@string/back_btn_desc"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:id="@+id/eduhubLogo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:scaleY="1.3"
            android:scaleX="1.3"
            app:tint="@color/main_green"
            app:srcCompat="@drawable/ic_lock"/>

        <TextView
            android:id="@+id/eduhubText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_top_eduhub_2"
            android:text="@string/eduhub"
            android:textColor="@color/main_green"
            android:textSize="@dimen/h1_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/resetPassText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:text="@string/forgot_password"
            android:textColor="@color/main_green"
            android:textSize="@dimen/h3_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/resetPassHintText"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/reset_pass_text"
            android:textAlignment="center"
            android:textColor="@color/main_green"
            android:textSize="@dimen/h4_size" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="@dimen/edit_text_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:alpha="0.5"
            android:autofillHints="emailAddress"
            android:background="@drawable/bg_input"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="@color/light_gray"
            android:textSize="@dimen/input_text_size"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/resetPassButton"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/bg_button_green"
            android:text="@string/reset_pass_btn"
            android:textColor="@color/bg_main_color"
            android:textSize="@dimen/h4_size"
            android:textStyle="bold"
            tools:ignore="VisualLintButtonSize"/>
    </LinearLayout>



</androidx.coordinatorlayout.widget.CoordinatorLayout>