<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.certificate.courses.Course1CertificateActivity">

    <ImageButton
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="@dimen/back_btn_margin_top"
        android:layout_marginStart="@dimen/back_btn_margin_left"
        android:src="@drawable/ic_left_arrow"
        android:background="@drawable/bg_button_green"
        android:contentDescription="@string/back_btn_desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/bg_main_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/congrat"
            android:textStyle="bold"
            android:textSize="@dimen/h1_size"
            android:textColor="@color/main_green"
            android:layout_marginTop="100dp"/>

        <ImageView
            android:layout_width="340dp"
            android:layout_height="240dp"
            android:layout_marginTop="30dp"
            android:contentDescription="@null"
            android:scaleType="centerCrop"
            android:src="@drawable/img_certificate_template" />

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/congrat2"
            android:textStyle="bold"
            android:textSize="@dimen/h4_size"
            android:textColor="@color/main_green"
            android:layout_marginTop="30dp"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/couse_1"
            android:textStyle="bold"
            android:textSize="@dimen/h3_size"
            android:textColor="@color/main_green"
            android:layout_marginTop="10dp"
            android:textAlignment="center"/>



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>