<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/certificatesLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_main_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/eduhubText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/eduhub"
            android:text="@string/eduhub"
            android:textColor="@color/main_green"
            android:textSize="@dimen/h1_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/my_certificates"
            android:textSize="@dimen/h3_size"
            android:textColor="@color/dark_color"
            android:textStyle="bold" />


    </LinearLayout>

    <TextView
        android:id="@+id/versionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/eduhub"
        android:text="@string/version"
        android:textColor="@color/light_gray"
        android:alpha="0.5"
        android:textSize="@dimen/h3_size"
        android:textStyle="bold"/>


</androidx.coordinatorlayout.widget.CoordinatorLayout>