<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/emailVerificationLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_main_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/eduhubLogo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_top_logo"
            app:srcCompat="@drawable/ic_eduhub"/>

        <TextView
            android:id="@+id/eduhubText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_top_eduhub_1"
            android:contentDescription="@string/eduhub"
            android:text="@string/eduhub"
            android:textColor="@color/main_green"
            android:textSize="@dimen/h1_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/resetEmailText"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/h4_size"
            android:textColor="@color/dark_color"
            android:text="@string/email_verification"
            android:textAlignment="center"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/redirectText"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:textSize="@dimen/h4_size"
            android:textColor="@color/dark_color"
            android:text="@string/redirect_login"
            android:textAlignment="center"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>