<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/aboutUsLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_main_color">

    <ImageButton
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="@dimen/back_btn_margin_top"
        android:layout_marginStart="@dimen/back_btn_margin_left"
        android:src="@drawable/left_arrow"
        android:background="@drawable/button_bg"
        android:contentDescription="@string/back_btn_desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/bg_main_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/eduhubText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/eduhub"
            android:text="@string/eduhub"
            android:textColor="@color/main_green"
            android:textSize="45sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/aboutUsText"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:contentDescription="@string/eduhub"
            android:text="@string/about_us_text"
            android:textColor="@color/dark_color"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/versionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-10dp"
            android:contentDescription="@string/eduhub"
            android:text="@string/version"
            android:textColor="@color/light_gray"
            android:alpha="0.5"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/bottom_navigation"/>

    </LinearLayout>





    <LinearLayout
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal"
        android:background="@color/bg_main_color"
        android:gravity="center">

        <ImageButton
            android:id="@+id/button_home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            android:src="@drawable/home_icon"
            android:background="@drawable/nav_bg"
            android:contentDescription="@string/account_exists"
            app:tint="@color/dark_color"/>

        <ImageButton
            android:id="@+id/button_certificates"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            android:src="@drawable/certificate_icon"
            android:background="@drawable/nav_bg"
            android:contentDescription="@string/account_exists"
            app:tint="@color/dark_color"/>

        <ImageButton
            android:id="@+id/button_menu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            android:src="@drawable/menu_icon"
            android:background="@drawable/nav_bg_selected"
            android:contentDescription="@string/account_exists"
            app:tint="@color/dark_color" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>