<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:src="@drawable/ic_eduhub"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eduhub"
            android:textSize="@dimen/h1_size"
            android:textStyle="bold"
            android:contentDescription="@null"
            android:textColor="@color/main_green"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signInButton"
            android:layout_width="@dimen/landing_button_width"
            android:layout_height="@dimen/landing_button_height"
            android:layout_marginTop="100dp"
            android:contentDescription="@null"
            android:text="@string/sign_in"
            android:textSize="@dimen/button_text_size"
            android:textColor="@color/main_green"
            android:textStyle="bold"
            android:background="@drawable/bg_button_white"
            android:layout_gravity="center_horizontal"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signUpButton"
            android:layout_width="@dimen/landing_button_width"
            android:layout_height="@dimen/landing_button_height"
            android:layout_marginTop="20dp"
            android:contentDescription="@null"
            android:text="@string/sign_up"
            android:textSize="@dimen/button_text_size"
            android:textColor="@color/bg_main_color"
            android:textStyle="bold"
            android:background="@drawable/bg_button_green"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>



</androidx.coordinatorlayout.widget.CoordinatorLayout>